--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href=""><h2 lang="en">WebStudio</h2></a>
+      <a href="">WebStudio</a>
       <nav>
         <ul>
           <li><a href="">Студия</a></li>
@@ -16,8 +16,10 @@
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
       <section>
@@ -25,6 +27,7 @@
         <button type="button">Заказать услугу</button>
       </section>
       <section>
+        <h2>Наши преимущества</h2>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
@@ -59,36 +62,34 @@
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-          <ul>
-            <li>
-              <img
-                src="./images/1img.jpg"
-                alt="печатает"
-                width="370"
-                height="294"
-              />
-            </li>
-            <li>
-              <img
-                src="./images/1img2.jpg"
-                alt="смотрит на экран"
-                width="370"
-                height="294"
-              />
-            </li>
-            <li>
-              <img
-                src="./images/1img3.jpg"
-                alt="работает с планшетом"
-                width="370"
-                height="294"
-              />
-            </li>
-          </ul>
+          <li>
+            <img
+              src="./images/1img.jpg"
+              alt="печатает"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/1img2.jpg"
+              alt="смотрит на экран"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/1img3.jpg"
+              alt="работает с планшетом"
+              width="370"
+              height="294"
+            />
+          </li>
         </ul>
       </section>
       <section>
-        <h2></h2>
+        <h2>Наша команда</h2>
         <ul>
           <li>
             <img
@@ -133,7 +134,7 @@
         </ul>
       </section>
       <footer>
-        <a href=""><h2 lang="en">WebStudio</h2></a>
+        <a href="">WebStudio</a>
         <address>
           <ul>
             <li>
